--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <title>OITECH demo</title>
 
         <!-- Styles -->
-        <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="node_modules/angular-loading-bar/build/loading-bar.min.css">
-        <link href="node_modules/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css"/>
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+        <link rel="stylesheet" href="node_modules/angular-loading-bar/build/loading-bar.min.css"/>
+        <link rel="stylesheet" href="node_modules/angular-material-data-table/dist/md-data-table.min.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
 
     <body ng-controller="AppCtrl" ng-cloak>
@@ -27,7 +27,7 @@
         <script src="node_modules/angular-aria/angular-aria.min.js"></script>
         <script src="node_modules/angular-messages/angular-messages.min.js"></script>                
         <script src="node_modules/angular-material/angular-material.min.js"></script>
-        <script src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>           
+        <script src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
 
         <!-- Application bootstrap  -->
         <script src="app.module.js"></script>
@@ -35,16 +35,18 @@
         <script src="app.directive.js"></script>
         <script src="app.service.js"></script>
         <script src="api/api.module.js"></script>
-        <script type="text/javascript" src="node_modules/angular-material-data-table/dist/md-data-table.min.js"></script>
+        <script src="node_modules/angular-material-data-table/dist/md-data-table.min.js"></script>
 
         <!-- Modules -->
         <!-- APIs -->
         <script src="api/jwt/jwt.module.js"></script>
         <script src="api/jwt/jwt.service.js"></script>
+        <script src="api/fact/fact.module.js"></script>
+        <script src="api/fact/fact.service.js"></script>        
 
         <!-- GET FACT -->
         <script src="get-fact/get-fact.module.js"></script>
-        <script src="get-fact/get-fact.component.js"></script>    
+        <script src="get-fact/get-fact.component.js"></script>
 
     </body>
 </html>
